--- a/2-2/2-2.vcxproj.filters
+++ b/2-2/2-2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="printscanf.c">
+    <ClCompile Include="예제2-2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
