--- a/논리연산자/논리연산자.vcxproj
+++ b/논리연산자/논리연산자.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2c06f27b-7468-4674-8b26-c412a131099c}</ProjectGuid>
-    <RootNamespace>_3_4</RootNamespace>
+    <ProjectGuid>{11d60e6a-4301-44a8-af42-13b049afdb2f}</ProjectGuid>
+    <RootNamespace>논리연산자</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제.c">
+    <ClCompile Include="예제4-6.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
