조건문.반복문/5일차

--- a/C_template2/C_template2.vcxproj.filters
+++ b/C_template2/C_template2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="break를 사용한 반복문 종료.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
