--- a/break로_무한반복문/break로_무한반복문.vcxproj.filters
+++ b/break로_무한반복문/break로_무한반복문.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="무한반복문_빠져나오기.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
