--- a/if문_기본_형식/if문_기본_형식.vcxproj
+++ b/if문_기본_형식/if문_기본_형식.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4a7e729e-9973-4cbe-9e26-dc5ee3f6d3ca}</ProjectGuid>
-    <RootNamespace>연산자_우선순위와_연산_방향</RootNamespace>
+    <ProjectGuid>{873220be-8f86-4097-9fde-3565ebe739fb}</ProjectGuid>
+    <RootNamespace>if문_기본_형식</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="IF문.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
