--- a/if문_기본_형식/if문_기본_형식.vcxproj.filters
+++ b/if문_기본_형식/if문_기본_형식.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="IF문.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
