--- a/반복문_문제3/반복문_문제3.vcxproj
+++ b/반복문_문제3/반복문_문제3.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4a7e729e-9973-4cbe-9e26-dc5ee3f6d3ca}</ProjectGuid>
-    <RootNamespace>연산자_우선순위와_연산_방향</RootNamespace>
+    <ProjectGuid>{98bfb6c5-a676-4386-8437-bd50e6a0585f}</ProjectGuid>
+    <RootNamespace>반복문_문제3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="%2410번_출력.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
