--- a/중괄호의_사용법과_들여쓰기/중괄호의_사용법과_들여쓰기.vcxproj.filters
+++ b/중괄호의_사용법과_들여쓰기/중괄호의_사용법과_들여쓰기.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="while문조건.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
