--- a/중첩_반복문_출력/중첩_반복문_출력.vcxproj
+++ b/중첩_반복문_출력/중첩_반복문_출력.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4a7e729e-9973-4cbe-9e26-dc5ee3f6d3ca}</ProjectGuid>
-    <RootNamespace>연산자_우선순위와_연산_방향</RootNamespace>
+    <ProjectGuid>{f626dd32-8fb7-492d-aaa0-f273edb4ee0e}</ProjectGuid>
+    <RootNamespace>중첩_반복문_출력</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-14.c">
+    <ClCompile Include="구구단_출력하는_프로그램.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
