--- a/187cm_미터단위로_환산/187cm_미터단위로_환산.vcxproj
+++ b/187cm_미터단위로_환산/187cm_미터단위로_환산.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a3cdb961-9c0e-4063-ae57-900b0c401cc5}</ProjectGuid>
-    <RootNamespace>사칙연산테스트_4_0__2_0_</RootNamespace>
+    <ProjectGuid>{fa40ebad-990b-42b2-af7b-8c517bb11b5e}</ProjectGuid>
+    <RootNamespace>_187cm_미터단위로_환산</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="환산하여_출력하는_프로그램.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
