--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="반환값없는함수.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
