--- a/매개변수가_없는_함수/매개변수가_없는_함수.vcxproj.filters
+++ b/매개변수가_없는_함수/매개변수가_없는_함수.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="매개변수가_없는_함수.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
