--- a/모두_없는_함수/모두_없는_함수.vcxproj
+++ b/모두_없는_함수/모두_없는_함수.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a3cdb961-9c0e-4063-ae57-900b0c401cc5}</ProjectGuid>
-    <RootNamespace>사칙연산테스트_4_0__2_0_</RootNamespace>
+    <ProjectGuid>{5b9bd921-4cc9-402b-b6ea-9e93b5baf548}</ProjectGuid>
+    <RootNamespace>모두_없는_함수</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="예제.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
