--- a/반환값_없는함수2/반환값_없는함수2.vcxproj.filters
+++ b/반환값_없는함수2/반환값_없는함수2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="함수_10이상시_없음.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
