--- a/반환값이없는_함수/반환값이없는_함수.vcxproj.filters
+++ b/반환값이없는_함수/반환값이없는_함수.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="인쇄_함수.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
