--- a/함수원형/함수원형.vcxproj
+++ b/함수원형/함수원형.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a3cdb961-9c0e-4063-ae57-900b0c401cc5}</ProjectGuid>
-    <RootNamespace>사칙연산테스트_4_0__2_0_</RootNamespace>
+    <ProjectGuid>{9f0db504-e2c7-419b-a249-9b23a4acbb19}</ProjectGuid>
+    <RootNamespace>함수원형</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="2개의_함수로_만든_프로그램.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
