--- a/함수원형/함수원형.vcxproj.filters
+++ b/함수원형/함수원형.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="문제.c">
+    <ClCompile Include="2개의_함수로_만든_프로그램.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
