--- a/1부터_일정_수까지의_합을구하는_sum함수/1부터_일정_수까지의_합을구하는_sum함수.vcxproj
+++ b/1부터_일정_수까지의_합을구하는_sum함수/1부터_일정_수까지의_합을구하는_sum함수.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5b9bd921-4cc9-402b-b6ea-9e93b5baf548}</ProjectGuid>
-    <RootNamespace>모두_없는_함수</RootNamespace>
+    <ProjectGuid>{bd4fe5a0-474b-4784-950d-220d02bf3bff}</ProjectGuid>
+    <RootNamespace>_1부터_일정_수까지의_합을구하는_sum함수</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="매개변수_반환값이_모두_없는_함수.c">
+    <ClCompile Include="sum_함수.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
