--- a/3번_실행되는_재귀호출2/3번_실행되는_재귀호출2.vcxproj
+++ b/3번_실행되는_재귀호출2/3번_실행되는_재귀호출2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5b9bd921-4cc9-402b-b6ea-9e93b5baf548}</ProjectGuid>
-    <RootNamespace>모두_없는_함수</RootNamespace>
+    <ProjectGuid>{1631fb44-c61b-41b9-89b4-8ebcdbae299d}</ProjectGuid>
+    <RootNamespace>_3번_실행되는_재귀호출2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="매개변수_반환값이_모두_없는_함수.c">
+    <ClCompile Include="재귀호출_함수2.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
