--- a/재귀호출_함수2/재귀호출_함수2.vcxproj
+++ b/재귀호출_함수2/재귀호출_함수2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5b9bd921-4cc9-402b-b6ea-9e93b5baf548}</ProjectGuid>
-    <RootNamespace>모두_없는_함수</RootNamespace>
+    <ProjectGuid>{4a8e4008-cff7-45fc-b64c-9cf7870a808e}</ProjectGuid>
+    <RootNamespace>재귀호출_함수2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="매개변수_반환값이_모두_없는_함수.c">
+    <ClCompile Include="3번_호출되는_재귀함수.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
