--- a/주소_연산자_&/주소_연산자_&.vcxproj
+++ b/주소_연산자_&/주소_연산자_&.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{77dcf822-ddd6-43dc-af1e-09175a1578eb}</ProjectGuid>
-    <RootNamespace>C_template1</RootNamespace>
+    <ProjectGuid>{ab1f03b7-23e2-4583-ab2d-0cdfd3bec460}</ProjectGuid>
+    <RootNamespace>주소_연산자__</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>연산의_결과값_사용</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제4-7.c">
+    <ClCompile Include="변수의_메모리_주소_확인.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
