--- a/개행문자로_인해_gets_함수가_입력을_못하는_경우/개행문자로_인해_gets_함수가_입력을_못하는_경우.vcxproj
+++ b/개행문자로_인해_gets_함수가_입력을_못하는_경우/개행문자로_인해_gets_함수가_입력을_못하는_경우.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="예제.c">
+    <ClCompile Include="개행문자로_인해_gets_함수가_입력을_못하는_경우.c">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemGroup>
